# liquid-music

./: cabal.project  liquid-music.cabal  stack.yaml
src/: Music.hs
src/Demo/: Lib.hs
