cabal-version: 1.12

name:           liquid-music
version:        0.1.0.0
description:    This toy package demonstrates the use of LH as a plugin.
homepage:
bug-reports:
author:         Matt Hunzinger
maintainer:     matthunz2@gmail.com
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Music
  hs-source-dirs:
      src
  build-depends:
      liquid-prelude,
      liquid-vector,
      liquidhaskell
  if impl(ghc >= 9.2)
    build-depends:
      base,
      containers,
      vector
  else
    build-depends:
      liquid-base,
      liquid-containers
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
